--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "Full Stack Engineering Student at Hack Reactor"
 author: 'Nassir Zeinu'
 # edit 'categories' in the front matter of every post to match this username
 nickname: nassir
-bio: 'Soft Ware Engineering Student at Hack Reactor'
+bio: 'Full Stack Engineer / Data Science Learner'
 location: 'Los Angeles, CA'
 url: 'http://nassirmz.github.io/Blog/'
 image: 'assets/images/casper.png'
