--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ language: 'en-uk'
 
 # Website info
 name: 'Nassir Zeinu'
-description: "Full Stack Engineering Student at Hack Reactor"
+description: "Full Stack Engineer / Data Science Learner"
 
 # Author's info
 author: 'Nassir Zeinu'
